log/build_2024-09-24_19-12-41/python_pkgs/stderr.log
  File "/home/shiva/ros2_playground/workspace2/install/python_pkgs/lib/python3.10/site-packages/python_pkgs/drone_image.py", line 15
    self.TeleportRequestFunct(x_p=((1 * math.cos(math.radians(45.0)))+1.5),y_p=((1 * math.sin(math.radians(45.0)))+1.5)
                             ^
SyntaxError: '(' was never closed

